--- a/adoption_detail.html
+++ b/adoption_detail.html
@@ -110,12 +110,12 @@
                 <li> -->
                     <div class="profile-details">
                         <div class="profile-content">
-                            <img src="Assets/Image/Profile.webp" alt="Profile">
+                            <img src="Assets/Image/james.webp" alt="Profile">
                         </div>
                         
                         <div class="name-job">
-                            <div class="profile_name">Samanthar</div>
-                            <div class="job">Beginner</div>
+                            <div class="profile_name">James</div>
+                            <div class="job">Seller</div>
                         </div>
                         <i class='bx bx-log-out' ></i>
                     </div>
@@ -129,7 +129,7 @@
             </nav>
             <div class = "adopt_box">
                 <div class = "user_box">
-                    <h3 class = "user">User Information</h3>
+                    <h2 class = "user">User Information</h2>
                     <div class = "user_info">
                         <img src = "Assets/Image/lisa.png">
                         <h3 class = "info">Information</h3>
@@ -142,16 +142,16 @@
                             <li><a href = "#">Addres: 742 Evergreen Terrace, Springfield</a></li>
                         </ul>
                     </div>
-                    <div class = "living_sit">
+                    <!-- <div class = "living_sit">
                         <h3 class = "living">Living Situation</h3>
                         <ul>
                             <li><a href = "#">Type of Residence: House with Garage</a></li>
                             <li><a href = "#">Financial Situation: Middle Class Family</a></li>
                         </ul>
-                    </div>
+                    </div> -->
                     <div class = "pet_info">
-                        <h3 class = "pet">Animal Information</h3>
-                        <img src = "Assets/Image/little.png">
+                        <h2 class = "pet">Animal Information</h2>
+                        <img src = "Assets/Image/GraceTheGreyhound.jpg">
                         <h3 class = "santa">Information</h3>
                         <ul>
                             <li><a href = "#">Name: Santa Little Helper</a></li>
@@ -160,17 +160,90 @@
                             <li><a href = "#">Gender: Male</a></li>
                         </ul>
                     </div>
-                    <div class = "reason">
-                        <h3 class = "reason_ad">Reasons For Adoption</h3>
+                    <!-- <div class = "reason">
+                        <h2 class = "reason_ad">Reasons For Adoption</h2>
                         <ul>
                             <li><a href = "#">Reason: Simpson Family want a dog</a></li>
                             <li><a href = "#">Goals: Provide a good life for the dog</a></li>
                         </ul>
+                    </div> -->
+                    <div class = "app">
+                        <h2 class = "app_head">Application Form</h2>
+                        <div class = "general">
+                            <h3 class = "general-head">General Information</h3>
+                            <ul>
+                                <li><a href = "#">Yes, I have experience owning this type of pet. I've enjoyed the companionship and unique characteristics they bring into my life.</a></li>
+                                <li><a href = "#"> I currently live in a cozy apartment/house. It provides a comfortable space for both me and my pet to thrive.</a></li>
+                                <li><a href = "#"> Yes, I have other pets at home. They add joy and excitement to our household, creating a lively and fulfilling environment for all of us.</a></li>
+                            </ul>
+                        </div>
+                        <div class = "lifestyle">
+                            <h3 class = "lifestyle-head">lifestyle and Schedule</h3>
+                            <ul>
+                                <li><a href = "#">I dedicate at least an hour each day to exercising and interacting with my pet.</a></li>
+                                <li><a href = "#">While I may be away occasionally, I ensure my pet's needs are met through arrangements like pet sitters or stimulating toys.</a></li>
+                            </ul>
+                        </div>
+                        <div class = "financial">
+                            <h3 class = "financial-head">Experience and Knowledge</h3>
+                            <ul>
+                                <li><a href = "#">Yes, I understand their unique traits and requirements.</a></li>
+                                <li><a href = "#">Absolutely, I've thoroughly researched and am committed to meeting their dietary, exercise, and health needs.</a></li>
+                            </ul>
+                        </div>
+                        <div class = "exp">
+                            <h3 class = "exp-head">Financial Responsibility</h3>
+                            <ul>
+                                <li><a href = "#">Yes, I'm ready for all aspects, including vet care, food, and grooming.</a></li>
+                                <li><a href = "#">Certainly, I've made arrangements for unexpected vet costs, like setting up an emergency fund or obtaining pet insurance.</a></li>
+                            </ul>
+                        </div>
+                        <div class = "commit">
+                            <h3 class = "commit-head">Commitment</h3>
+                            <ul>
+                                <li><a href = "#">Absolutely, I'm fully committed to providing lifelong care and love for my pet, understanding that pet ownership is a long-term responsibility.</a></li>
+                                <li><a href = "#">I've thoughtfully considered potential major life changes and have plans in place to ensure my pet's well-being remains a priority. Whether it involves finding pet-friendly accommodations or adjusting routines to accommodate new family members, my pet's happiness and safety are paramount.</a></li>
+                            </ul>
+                        </div>
+                        <div class = "social">
+                            <h3 class = "social-head">Training and Socialization</h3>
+                            <ul>
+                                <li><a href = "#">Definitely, training and socializing are priorities for me.</a></li>
+                                <li><a href = "#">I'll address them patiently and seek professional guidance if needed.</a></li>
+                            </ul>
+                        </div>
+                        <div class = "care">
+                            <h3 class = "care-head">Veterinary Care</h3>
+                            <ul>
+                                <li><a href = "#">I'm open to finding a reputable veterinarian in my area to ensure my pet receives the best possible care.</a></li>
+                                <li><a href = "#">Yes, I'm knowledgeable about my pet's vaccination and preventive care requirements, and I'm committed to keeping them up-to-date on all necessary vaccinations and health screenings.</a></li>
+                            </ul>
+                        </div>
+                        <div class = "compa">
+                            <h3 class = "compa-head">Compatibility</h3>
+                            <ul>
+                                <li><a href = "#">I've chosen this specific type of pet because their temperament, size, activity level, and compatibility with family members align perfectly with what I'm looking for in a companion.</a></li>
+                                <li><a href = "#">This pet seamlessly integrates into our family and lifestyle, complementing our dynamics and activity levels. They bring joy, companionship, and enrichment to our daily routines.</a></li>
+                            </ul>
+                        </div>
+                        <div class = "follow">
+                            <h3 class = "follow-head">Follow-Up</h3>
+                            <ul>
+                                <li><a href = "#">Absolutely, I welcome follow-up visits or check-ins after the adoption/sale. Ensuring the well-being and happiness of the pet is a top priority, and I'm open to any support or guidance provided.</a></li>
+                            </ul>
+                        </div>
+                        <div class = "why">
+                            <h3 class = "why-head">Why do you want to adopt/buy this paw from us?</h3>
+                            <ul>
+                                <li><a href = "#">I'm eager to adopt/buy this pet from you because I've been impressed by the positive feedback and reputation of your organization. Your commitment to matching pets with loving families and providing ongoing support aligns perfectly with what I'm looking for. I trust that by choosing a pet from your organization, I'll not only find a wonderful companion but also have the assurance of ongoing assistance and resources.</a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class = "button">
                         <button type = "button" class = "accept">Accept</button>
                         <button type = "button" class = "reject">Reject</button>
                     </div>
+                    
                 </div>
             </div>
         </section>
