--- a/app_status.html
+++ b/app_status.html
@@ -105,12 +105,12 @@
                 <li> -->
                     <div class="profile-details">
                         <div class="profile-content">
-                            <img src="Assets/Image/Profile.webp" alt="Profile">
+                            <img src="Assets/Image/james.webp" alt="Profile">
                         </div>
                         
                         <div class="name-job">
-                            <div class="profile_name">Samanthar</div>
-                            <div class="job">Beginner</div>
+                            <div class="profile_name">James</div>
+                            <div class="job">Seller</div>
                         </div>
                         <i class='bx bx-log-out' ></i>
                     </div>
