--- a/application_details.html
+++ b/application_details.html
@@ -62,12 +62,12 @@
             
                     <div class="profile-details">
                         <div class="profile-content">
-                            <img src="Assets/Image/Profile.webp" alt="Profile">
+                            <img src="Assets/Image/james.webp" alt="Profile">
                         </div>
                         
                         <div class="name-job">
-                            <div class="profile_name">Samanthar</div>
-                            <div class="job">Beginner</div>
+                            <div class="profile_name">James</div>
+                            <div class="job">Seller</div>
                         </div>
                         <i class='bx bx-log-out' ></i>
                     </div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class = "order-detail">
                         <h3 class = "order-head">Order Details</h3>
-                        <img src = "Assets/Image/snowball.png">
+                        <img src = "Assets/Image/domestic-shorthair-cat-blanket-1-.jpg">
                         <div class = "order-info">
                             <ul>
                                 <li><a href = "#">Name: Snowball</a></li>
