--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
                 <li> -->
                     <div class="profile-details">
                         <div class="profile-content">
-                            <img src="Assets/Image/Profile.webp" alt="Profile">
+                            <img src="Assets/Image/james.webp" alt="Profile">
                         </div>
                         
                         <div class="name-job">
-                            <div class="profile_name">Samanthar</div>
-                            <div class="job">Beginner</div>
+                            <div class="profile_name">James</div>
+                            <div class="job">Seller</div>
                         </div>
                         <i class='bx bx-log-out' ></i>
                     </div>
@@ -121,12 +121,13 @@
             <nav class="home-content">
                 <i class="bx bx-menu"></i>
                 <span class="text">Product Listings</span>
+                <div class = "search">
+                    <form>
+                        <input type = "text" placeholder = "Search"name = "searchbar">
+                    </form>
+                </div>
             </nav>
-            <div class = "search">
-                <form>
-                    <input type = "text" placeholder = "Search"name = "searchbar">
-                </form>
-            </div>
+            <div class = "samoyed">
             <div class = "samoyed-box">
                 <div class = "samoyed-container">
                     <img src = "Assets/Image/Samoyed (1).jpg" alt = "Samoyed">
@@ -145,6 +146,7 @@
                         </form>
                     </div>
                 </div>
+            </div>
             </div>
         <script src = "Assets/JS/script.js"></script>
     </body>
